--- a/packages/fstate/pubspec.yaml
+++ b/packages/fstate/pubspec.yaml
@@ -1,7 +1,8 @@
 name: fstate
 description: A starting point for Dart libraries or applications.
 version: 0.1.0
-# repository: https://github.com/my_org/my_repo
+homepage: https://github.com/wurikiji/fstate
+repository: https://github.com/wurikiji/fstate
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
