--- a/packages/flutter_fstate/pubspec.yaml
+++ b/packages/flutter_fstate/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_fstate
 description: A new Flutter package project.
-version: 0.0.1
-homepage:
+version: 0.1.0
+homepage: https://github.com/wurikiji/fstate
+repository: https://github.com/wurikiji/fstate
 
 environment:
   sdk: ">=2.19.0 <3.0.0"
