feat(generator): no argument fstate

--- a/packages/fstate_generator/build.yaml
+++ b/packages/fstate_generator/build.yaml
@@ -1,7 +1,9 @@
 targets:
   $default:
     builders:
-      core_generator:
+      fstate_generator:core_generator:
+        enabled: true
+      fstate_generator:widget_generator:
         enabled: true
 
 builders:
@@ -9,7 +11,16 @@ builders:
     import: "package:fstate_generator/core_builder.dart"
     builder_factories:
       - "coreBuilder"
-    build_extensions: { ".dart": [".fstate.g.dart"] }
+    build_extensions: { ".dart": [".fstate.g.part"] }
+    auto_apply: dependents
+    build_to: cache
+    applies_builders: [source_gen:combining_builder]
+
+  widget_generator:
+    import: "package:fstate_generator/widget_builder.dart"
+    builder_factories:
+      - "widgetBuilder"
+    build_extensions: { ".dart": [".fwidget.g.part"] }
     auto_apply: dependents
     build_to: cache
     applies_builders: [source_gen:combining_builder]
