--- a/packages/fstate/pubspec.yaml
+++ b/packages/fstate/pubspec.yaml
@@ -9,13 +9,18 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  async: ^2.10.0
   flutter:
     sdk: flutter
+  meta: ^1.8.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  fake_async: ^1.3.1
+  clock: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
