--- a/packages/fstate_generator/pubspec.yaml
+++ b/packages/fstate_generator/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   source_gen: ^1.2.7
   build_config: ^1.1.1
   path: 1.8.2
+  recase: ^4.1.0
+  dart_style: ^2.3.0
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter:
@@ -25,3 +28,4 @@ dev_dependencies:
   build_test: ^2.1.6
   lints: ^2.0.0
   test:
+  rxdart: ^0.27.7
