--- a/packages/fstate/pubspec.yaml
+++ b/packages/fstate/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fstate
-description: A new Flutter package project.
+description: Metaprogramming-based dependency injection and state management packages for Flutter.
 version: 0.1.1
 homepage: https://github.com/wurikiji/fstate
 repository: https://github.com/wurikiji/fstate
