--- a/packages/fstate_generator/pubspec.yaml
+++ b/packages/fstate_generator/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   code_builder: ^4.4.0
   source_gen: ^1.2.7
   build_config: ^1.1.1
-  path: 1.8.2
+  path: ^1.8.2
   recase: ^4.1.0
   dart_style: ^2.3.0
   meta: ^1.8.0
