--- a/packages/fstate/pubspec.yaml
+++ b/packages/fstate/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fstate
 description: Metaprogramming-based dependency injection and state management packages for Flutter.
-version: 0.1.1+3
+version: 0.2.0
 homepage: https://github.com/wurikiji/fstate
 repository: https://github.com/wurikiji/fstate
 
