--- a/packages/fstate/pubspec.yaml
+++ b/packages/fstate/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fstate
 description: Metaprogramming-based dependency injection and state management packages for Flutter.
-version: 0.5.0
+version: 0.6.0
 homepage: https://github.com/wurikiji/fstate
 repository: https://github.com/wurikiji/fstate
 
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   meta: ^1.8.0
   rxdart: ^0.27.7
-  fstate_annotation: ">=0.1.0 <1.0.0"
-
+  fstate_annotation: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
