--- a/packages/fstate_annotation/pubspec.yaml
+++ b/packages/fstate_annotation/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fstate_annotation
 description: A set of annotations for fstate.
-version: 0.2.0+1
+version: 0.3.0
 repository: https://github.com/wurikiji/fstate
 
 environment:
