--- a/packages/fstate_generator/pubspec.yaml
+++ b/packages/fstate_generator/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fstate_generator
 description: A dart code generator for fstate. See fstate for details.
-version: 0.5.0+1
+version: 0.6.0
 homepage: https://github.com/wurikiji/fstate
 repository: https://github.com/wurikiji/fstate
 
@@ -17,7 +17,7 @@ dependencies:
   recase: ^4.1.0
   dart_style: ^2.3.0
   meta: ^1.8.0
-  fstate_annotation: ^0.2.0+1
+  fstate_annotation: ^0.3.0
 dev_dependencies:
   build_runner: ^2.3.3
   build_test: ^2.1.6
