--- a/examples/counter/pubspec.yaml
+++ b/examples/counter/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   async: ^2.10.0
   flutter:
     sdk: flutter
-  fstate: ^0.8.0
+  fstate: ^0.8.0+1
   rxdart: ^0.27.7
 
 dev_dependencies:
