--- a/examples/todo/pubspec.yaml
+++ b/examples/todo/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fstate: ^0.8.0
+  fstate: ^0.8.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
