--- a/packages/fstate_test/pubspec.yaml
+++ b/packages/fstate_test/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fstate: ^0.8.0+1
+  fstate: ^0.8.0+2
   rxdart: ^0.27.7
 
 dev_dependencies:
@@ -48,7 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  fstate_generator: ^0.7.0
+  fstate_generator: ^0.7.0+1
   build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
